// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinct streams mode should report operation validation issues by streaming them 1`] = `
Object {
  "data": Object {
    "errors": Array [
      Object {
        "locations": Array [
          Object {
            "column": 3,
            "line": 1,
          },
        ],
        "message": "Cannot query field \\"notExists\\" on type \\"Query\\".",
      },
    ],
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should report operation validation issues by streaming them 2`] = `
Object {
  "data": null,
  "event": "complete",
  "id": "",
}
`;

exports[`distinct streams mode should stream query operations to connected event stream and then disconnect 1`] = `
Object {
  "data": Object {
    "data": Object {
      "getValue": "value",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream query operations to connected event stream and then disconnect 2`] = `
Object {
  "data": null,
  "event": "complete",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 1`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hi",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 2`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Bonjour",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 3`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Hola",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 4`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Ciao",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 5`] = `
Object {
  "data": Object {
    "data": Object {
      "greetings": "Zdravo",
    },
  },
  "event": "next",
  "id": "",
}
`;

exports[`distinct streams mode should stream subscription operations to connected event stream and then disconnect 6`] = `
Object {
  "data": null,
  "event": "complete",
  "id": "",
}
`;

exports[`single stream mode should report operation validation issues to request 1`] = `"{\\"errors\\":[{\\"message\\":\\"Cannot query field \\\\\\"notExists\\\\\\" on type \\\\\\"Query\\\\\\".\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}]}]}"`;

exports[`single stream mode should stream query operations to connected event stream 1`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"getValue\\":\\"value\\"}}}"`;

exports[`single stream mode should stream subscription operations to connected event stream 1`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Hi\\"}}}"`;

exports[`single stream mode should stream subscription operations to connected event stream 2`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Bonjour\\"}}}"`;

exports[`single stream mode should stream subscription operations to connected event stream 3`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Hola\\"}}}"`;

exports[`single stream mode should stream subscription operations to connected event stream 4`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Ciao\\"}}}"`;

exports[`single stream mode should stream subscription operations to connected event stream 5`] = `"{\\"id\\":\\"1\\",\\"payload\\":{\\"data\\":{\\"greetings\\":\\"Zdravo\\"}}}"`;
